# seneca-hacks-2025

./: .env.example  Dockerfile  Enhanced_API_Test_Guide.md  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  README.md  main.py  makefile  pyproject.toml
backend/src/body_behavior_recommender/: __init__.py  app.py  data_loader.py  db.py  endpoints.py  kafka_producer.py  models.py  mongo_wrapper.py  prompts.py  services.py  utils.py
backend/tests/: README.md  __init__.py  conftest.py  test_endpoints.py  test_models.py  test_prompts.py  test_services.py  test_utils.py
form-corrector/: .gitignore  Dockerfile  README.md  app.py  exercise_analyzer.py  requirements.txt
frontend/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: AppShell.jsx  TabBar.jsx  TopBar.jsx
frontend/src/data/: demo.js
frontend/src/lib/: api.js
frontend/src/pages/: Coach.jsx  Dashboard.jsx  FormCorrector.jsx  LiveCoach.jsx  Login.jsx  Meals.jsx  Music.jsx  Preferences.jsx  (+5 more)
src/body_behavior_recommender/: app.py  endpoints.py  services.py  utils.py
tests/: conftest.py  test_models.py  test_services.py
worker/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  test_worker.py
worker/src/feedback_worker/: __init__.py  main.py  processor.py  worker.py
worker/src/shared/: __init__.py  db.py  utils.py
(+6 files in other folders)
