[project]
name = "body-behavior-recommender"
version = "0.1.0"
description = "AI-powered Body-to-Behavior Recommender API using contextual bandits for personalized music, meal, and workout suggestions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "uvicorn[standard]>=0.35.0",
    "mabwiser>=2.7.3",
    "pymongo>=4.15.0",
    "openai>=1.107.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/body_behavior_recommender"]
