[project]
name = "feedback-worker"
version = "0.1.0"
description = "Async feedback processor for Body-to-Behavior Recommender"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0.2",
    "pydantic>=2.11.9",
    "pymongo>=4.15.0",
    "numpy>=2.3.3",
    "mabwiser>=2.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback_worker"]